src/styles/globals.scss
/* ... */
// Sign Transaction
.SignTx {
  display: flex;
  flex-direction: column;
  gap: pxToRem(24px);

  &__xdr {
    display: flex;
    flex-direction: column;
    gap: pxToRem(16px);

    .Text {
      display: flex;
      align-items: center;
      gap: pxToRem(4px);
      color: var(--sds-clr-gray-12);
    }
  }

  &__icon {
    display: inline-block;
    width: pxToRem(14px);
    height: pxToRem(14px);

    svg {
      display: inline-block;
      width: 100%;
      height: 100%;
      stroke: var(--sds-clr-gray-08);
    }
  }

  &__FieldViewer,
  &__Field {
    display: grid;
    gap: pxToRem(16px);

    @media screen and (min-width: 640px) {
      grid-template-columns: repeat(2, 1fr);

      .half-width {
        grid-template-columns: 1fr 1fr;
      }

      .full-width {
        grid-column: 1 / 3;
      }
    }
  }

  &__FieldViewer {
    .Textarea textarea,
    .Input__container,
    .Input__copyButton button,
    input {
      background: var(--sds-clr-gray-03);
    }
  }

  &__note {
    font-weight: var(--sds-fw-medium) !important;
  }

  &__hardwareDropdown {
    min-width: pxToRem(190px);
  }

  &__Signs {
    display: flex;
    flex-direction: column;
    gap: pxToRem(12px);
  }

  &__Buttons {
    display: flex;
    flex-direction: row;
    grid-column: 1 / 3;
    gap: pxToRem(12px);
    justify-content: space-between;

    div {
      display: flex;
      gap: pxToRem(8px);
    }
  }

  .Input__container {
    .Select__container {
      border: 0;
    }
    input {
      flex-shrink: 1;
    }
  }
  .Input__buttons {
    .Input__container {
      padding-right: 0;
    }
    .hardware-button {
      flex-grow: 1;
      border-left: 1px solid var(--Input-color-border);
    }
    .hardware-sign-button {
      .Button {
        margin-top: pxToRem(25px);
      }
    }
  }
}

// to fix Safari only styling bug
.Input,
.RadioPicker,
.Select,
.Box {
  .Label__infoButton {
    width: pxToRem(16px);
    height: pxToRem(16px);
  }
}

